<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.example.kisar.dovizapp.View.DetayActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:orientation="vertical"
        android:layout_weight="3.05">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/vchart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.04"
            android:padding="10dp">

        </com.github.mikephil.charting.charts.BarChart>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.37">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvcode1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvcode" />

                <TextView
                    android:id="@+id/tvcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvname1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvname" />

                <TextView
                    android:id="@+id/tvname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvbugunalis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvbugunalis" />

                <TextView
                    android:id="@+id/tvbugunalis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvbugunsatis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvbugunsatis" />

                <TextView
                    android:id="@+id/tvbugunsatis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvbugunendusuk1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.30"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvbugunendusuk" />

                <TextView
                    android:id="@+id/tvbugunendusuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvbugunenyuksek1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvbugunenyuksek" />

                <TextView
                    android:id="@+id/tvbugunenyuksek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvbugunendusuksatis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.37"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvbugunendusuksatis" />

                <TextView
                    android:id="@+id/tvbugunendusuksatis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvbugunenyukseksatis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.30"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvbugunenyukseksatis" />

                <TextView
                    android:id="@+id/tvbugunenyukseksatis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvduncapanisalis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvduncapanisalis" />

                <TextView
                    android:id="@+id/tvduncapanisalis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvgunsonukapanis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.68"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvgunsonukapanis" />

                <TextView
                    android:id="@+id/tvgunsonukapanis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvgunlukdegisim1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvgunlukdegisim" />

                <TextView
                    android:id="@+id/tvgunlukdegisim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gunlukdegisimyüzde1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvgunlukdegisimyüzde" />

                <TextView
                    android:id="@+id/gunlukdegisimyüzde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvtarih1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:padding="@dimen/tvpadding"
                    android:text="@string/tvtarih" />

                <TextView
                    android:id="@+id/tvtarih"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="@dimen/tvpadding"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
